--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <!-- icons CDN -->
   <script src="https://kit.fontawesome.com/43e0cb9760.js" crossorigin="anonymous"></script>
 
-  <title>Social Hub | @cmulay</title>
+  <title>Social Hub | @atharva21-stack</title>
 </head>
 
 <body>
   <div class="container">
-    <img src="https://avatars.githubusercontent.com/u/70438130?v=4" alt="cmulay | Profile" class="profile">
+    <img src="https://avatars.githubusercontent.com/u/70438130?v=4" alt="atharva21-stack | Profile" class="profile">
     <h2 style="color: black;">Atharva Chandwadkar</h2>
     <i style="color: black;">Full Stack Developer</i>
     <p class="subtitle">Innovating Everyday.</p>
