--- a/coming-soon.html
+++ b/coming-soon.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="https://avatars.githubusercontent.com/u/38172685?v=4" type="image/x-icon">
 
-    <title>Social Hub | @cmulay</title>
+    <title>Social Hub | @atharva21-stack</title>
 </head>
 
 <body>
